--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
     padding-top: 1%;
     font-family: "Lato", sans-serif;
     font-size: 18px;
+    border-radius: 2%;
 }
 
 .container {
@@ -65,6 +66,7 @@ h4 {
     display: flex;
     justify-content: space-between;
     margin: 20px 0;
+    max-width: 50vw;
 }
 
 .inc-exp-container > div {
@@ -103,7 +105,7 @@ label {
     font-weight: bold;
 }
 
-input[type="text"],
+select,
 input[type="number"] {
     border: 1px solid #dedede;
     border-radius: 2px;
@@ -175,4 +177,8 @@ input[type="number"] {
 
 .list li:hover .delete-btn {
     opacity: 1;
+}
+
+#clear {
+    background-color: red;
 }
